Fix color panel on ios, increase circle size

--- a/src/components/Editor/ElementDetails/ColorSelection/ColorSelection.css
+++ b/src/components/Editor/ElementDetails/ColorSelection/ColorSelection.css
@@ -1,11 +1,12 @@
 .color-button {
-  width: 20px;
-  height: 20px;
+  width: 32px;
+  height: 32px;
 
-  margin: 0 2px;
+  margin: 0 4px;
+  padding: 0;
 
   border-radius: 50%;
-  border: 2px solid #fff;
+  border: 4px solid #fff;
 
   cursor: pointer;
 }
